Bug #16372 server crashes when test 'conc_sys' is running
Submitted: 11 Jan 2006 13:37 Modified: 11 May 2006 18:40
Reporter: Carsten Segieth
Status: Closed
Category:Server: Locking Severity:S2 (Serious)
Version:5.0.17a-cert, 4.1.19 OS:Any (any)
Assigned to: Bugs System Target Version:

[11 Jan 2006 13:37] Carsten Segieth
Description:
running the test suite 'conc_sys' crashed the server:

 The instruction at "0x004a5bc3" referenced memory at "0x008000390". 
 The memory could not be "read".

This issue is reported at the first occurrency, I try to reproduce it now and will try to
provide a reduced test for easier reproduction.

How to repeat:
- bk clone mysql-test-extra-5.0
- start the server on Windows, using e.g. the script from the 'system_1 ' test suite
- start the client on a Linux machine in directory 'mysql-test': run-conc_sys.sh (after
changing the values inside.
- more details and hopefully some scripts will be provided later after better analyzing
the crash

Suggested fix:
fix the crashing server
[18 Apr 2006 11:19] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5069
[27 Apr 2006 12:53] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5629
[27 Apr 2006 13:17] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5630
[4 May 2006 9:39] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5930
[6 May 2006 9:25] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/6040
[11 May 2006 12:38] Tomash Brechko
Fixed in 4.1.20, 5.0.22, 5.1.11.
[11 May 2006 18:40] Paul DuBois
Noted in 4.1.20, 5.0.22, 5.1.11 changelogs.

Concurrent reading and writing of privilege structures could
crash the server.